# image-vector-search

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: app.py
scripts/: get_embeddings.py
src/picture_similarities/: __init__.py  config.py  embedding.py  ingest.py  search.py
