[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picture-similarities"
version = "0.1.0"
description = "Image similarity search (ResNet-50 embeddings) with Postgres+pgvector and a Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "numpy>=1.26",
  "pillow>=10.2",
  "python-dotenv>=1.0",
  "streamlit>=1.32",
  "lancedb>=0.9.0",
  "pyarrow>=15.0.0",
  "torch>=2.2",
  "transformers>=4.39",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
